Create example of POST method

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/eacarras/serverless_api_gateway_lambda_example#readme",
   "dependencies": {
+    "querystring": "^0.2.0",
     "serverless-offline": "^6.1.4"
   }
 }
