--- a/password_strength/serverless.yml
+++ b/password_strength/serverless.yml
@@ -4,6 +4,13 @@ provider:
   name: aws
   runtime: nodejs12.x
 
+plugins:
+  - serverless-offline
+
 functions:
-  hello:
-    handler: handler.hello
+  password:
+    handler: handler.password
+    events: 
+      - http:
+          path: password/{password}
+          method: get
