--- a/password_strength/package.json
+++ b/password_strength/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "serverless-offline": "^6.1.4",
     "zxcvbn": "^4.4.2"
+  },
+  "devDependencies": {
+    "serverless-plugin-include-dependencies": "^4.1.0"
   }
 }
