--- a/password_strength/serverless.yml
+++ b/password_strength/serverless.yml
@@ -6,6 +6,11 @@ provider:
 
 plugins:
   - serverless-offline
+  - serverless-plugin-include-dependencies
+
+package:
+  exclude:
+    - node_modules/**
 
 functions:
   password:
