Add offline mode in the project

--- a/serverless_express_dynamo/serverless.yml
+++ b/serverless_express_dynamo/serverless.yml
@@ -2,6 +2,15 @@ service: express-sls
 
 custom:
   tableName: 'user-table-${self:provider.stage}'
+  dynamodb:
+    start:
+      migrate: true
+    stages:
+      - dev
+
+plugins:
+  - serverless-offline
+  - serverless-dynamodb-local
 
 provider:
   name: aws
