--- a/serverless_express_dynamo/package.json
+++ b/serverless_express_dynamo/package.json
@@ -14,5 +14,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "serverless-http": "^2.3.2"
+  },
+  "devDependencies": {
+    "serverless-dynamodb-local": "^0.2.39",
+    "serverless-offline": "^6.1.4"
   }
 }
